--- a/index.html
+++ b/index.html
@@ -17,12 +17,42 @@
         <div class="bg-opacity">
             <div class="slide-show-contents">
                 <h1>Let's Help Those Who Are<br>More In Need</h1>
-                <p class="p-width">No one is useless in this world who lightens the burdens of another. There is no exercise better for
+                <p class="p-width">No one is useless in this world who lightens the burdens of another. There is no
+                    exercise better for
                     the
                     heart than reaching down and lifting people up. When we give cheerfully and accept gratefully,
                     everyone
                     is blessed.</p>
-                <a class="btn-style"  href="#">Donate Now</a>
+                <a class="btn-style" href="#">Donate Now</a>
+            </div>
+        </div>
+    </section>
+    <section class="donate-option">
+        <div class="donate-content">
+            <div class="quotes">
+                <h1>Donate Loves</h1>
+                <p p-width>Alone we can do so little<br>Together we can do so much</p>
+            </div>
+            <div class="amount">
+                <div class="tk">
+                    <h2>100tk</h2>
+                </div>
+                <div class="tk" id="tk">
+                    <h2>200tk</h2>
+                </div>
+                <div class="tk">
+                    <h2>300tk</h2>
+                </div>
+                <div class="tk">
+                    <h2>400tk</h2>
+                </div>
+                <div class="tk">
+                    <h2>500tk</h2>
+                </div>
+            </div>
+            <div>
+                <input class="other-amount" type="text" placeholder="Other Amount(Taka)"><br>
+                <a class="btn-style" href="#">Donate Now</a>
             </div>
         </div>
     </section>
