subscribe section complete

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -56,6 +57,53 @@
             </div>
         </div>
     </section>
+    <section class="donate-plan">
+        <div class="donate-plan-content">
+            <div class="plan-quotes">
+                <h1>Our Donate Plan</h1>
+                <p p-width>It’s easier to take than to give. It’s nobler to give than to take. The thrill of taking lasts a day. The thrill of giving lasts a lifetime. Together we can do so much</p>
+            </div>
+            <div class="plans">
+                <div class="plan" id="plan1">
+                    <img class="icon" src="icons/food.png">
+                    <h3>Food for a family</h3>
+                    <p>Hunger should kick the can! Don’t be rude, donate some food. Give what you can.</p>
+                </div>
+                <div class="plan" id="plan2">
+                    <img class="icon" src="icons/shelter.png">
+                    <h3>Food for a family</h3>
+                    <p>Shelter can be hard to find. A place can become our home for reasons we do not understand. We build the memories that turn into what we are, then what we were, as we look back.</p>
+                </div>
+                <div class="plan" id="plan3">
+                    <img class="icon" src="icons/blood.svg">
+                    <h3>Food for a family</h3>
+                    <p>Blood Donation Is A Small Act Of Kindness That Does Great And Big Wonders. Blood Donation Costs You Nothing, But It Can Mean The World To Someone In Need.</p>
+                </div>
+            </div>
+            
+        </div>
+    </section>
+
+    
+
+    <section>
+        <form class="subscibe" action="#">
+            <div class="quotes">
+                <h1>Get My Updates</h1>
+                <p p-width>Be With us. We will find you when need help. Help the other and get help from nature.</p>
+            </div>
+            <div class="sub-pan">
+                <div class="sub-design">
+                    <input class="email" placeholder="Email" type="text"><input type="submit" class="button"></input>
+                </div>
+            </div>
+        </form>
+    </section>
 </body>
+
+<footer>
+    <h2 class="footer-h2">Be Humble</h2>
+    <p>I'm gonna do it</p>
+</footer>
 
 </html>
