--- a/index.html
+++ b/index.html
@@ -84,7 +84,18 @@
         </div>
     </section>
 
-    
+    <section class="gallery">
+        <div class="half-width">
+            <h1>Program Gallery</h1>
+            <p>I left the bank
+                because they wouldn’t deposit my cheque of poems. So I went to the store, but they didn’t accept my currency of words. So I boxed all my stories and took them to charity. They refused my donation and asked me to give blood instead. I opened the notebooks and made them look, 'What do you think. I wrote these in?</p>
+            <a class="btn-style" target="_blank"
+                href="https://assunnahfoundation.org/gallery">View</a>
+        </div>
+        <div class="half-width">
+            <img src="images/donation10.jpg" alt="sayed profile">
+        </div>
+    </section>
 
     <section>
         <form class="subscibe" action="#">
