--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         <div class="donate-plan-content">
             <div class="plan-quotes">
                 <h1>Our Donate Plan</h1>
-                <p p-width>It’s easier to take than to give. It’s nobler to give than to take. The thrill of taking lasts a day. The thrill of giving lasts a lifetime. Together we can do so much</p>
+                <p p-width>It’s easier to take than to give. It’s nobler to give than to take. The thrill of taking
+                    lasts a day. The thrill of giving lasts a lifetime. Together we can do so much</p>
             </div>
             <div class="plans">
                 <div class="plan" id="plan1">
@@ -72,15 +73,15 @@
                 <div class="plan" id="plan2">
                     <img class="icon" src="icons/shelter.png">
                     <h3>Food for a family</h3>
-                    <p>Shelter can be hard to find. A place can become our home for reasons we do not understand. We build the memories that turn into what we are, then what we were, as we look back.</p>
+                    <p>Shelter can be hard to find. A place can become our home for reasons we do not understand.</p>
                 </div>
                 <div class="plan" id="plan3">
                     <img class="icon" src="icons/blood.svg">
                     <h3>Food for a family</h3>
-                    <p>Blood Donation Is A Small Act Of Kindness That Does Great And Big Wonders. Blood Donation Costs You Nothing, But It Can Mean The World To Someone In Need.</p>
+                    <p>Blood Donation Is A Small Act Of Kindness That Does Great And Big Wonders.</p>
                 </div>
             </div>
-            
+
         </div>
     </section>
 
@@ -88,9 +89,11 @@
         <div class="half-width">
             <h1>Program Gallery</h1>
             <p>I left the bank
-                because they wouldn’t deposit my cheque of poems. So I went to the store, but they didn’t accept my currency of words. So I boxed all my stories and took them to charity. They refused my donation and asked me to give blood instead. I opened the notebooks and made them look, 'What do you think. I wrote these in?</p>
-            <a class="btn-style" target="_blank"
-                href="https://assunnahfoundation.org/gallery">View</a>
+                because they wouldn’t deposit my cheque of poems. So I went to the store, but they didn’t accept my
+                currency of words. So I boxed all my stories and took them to charity. They refused my donation and
+                asked me to give blood instead. I opened the notebooks and made them look, 'What do you think. I wrote
+                these in?</p>
+            <a class="btn-style" target="_blank" href="https://assunnahfoundation.org/gallery">View</a>
         </div>
         <div class="half-width">
             <img src="images/donation10.jpg" alt="sayed profile">
