--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
             <div class="sub-pan">
                 <div class="sub-design">
-                    <input class="email" placeholder="Email" type="text"><input type="submit" class="button"></input>
+                    <input class="email" placeholder="Email" type="text"><button class="button">Subscribe</button></input>
                 </div>
             </div>
         </form>
